feat(api)!: add new endpoint /products/sales and change some bussiness logic
